--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
-<yakke-web-speech></yakke-web-speech>
+<app-web-speech style="height: 50px;display: block"></app-web-speech>
+<app-slides style="height: 100vh; display: block"></app-slides>
