--- a/src/web-speech/web-speech.component.html
+++ b/src/web-speech/web-speech.component.html
@@ -1,2 +1,3 @@
 <button (click)="start($event)">listen</button>
+<button (click)="startQuick($event)">listen</button>
 <button (click)="stop($event)">stop</button>
