--- a/src/slides/slides.component.html
+++ b/src/slides/slides.component.html
@@ -18,5 +18,14 @@
   <div class="img-container" *ngIf="(visibility$|async)?.showTinto">
     <img src="../assets/tinto.jpg">
   </div>
+  <div class="img-container" *ngIf="(visibility$|async)?.showTintoZit">
+    <img src="../assets/tintoZit.jpg">
+  </div>
+  <div class="img-container" *ngIf="(visibility$|async)?.showTintoHighFive">
+    <img src="../assets/tintoHighFive.jpg">
+  </div>
+  <div class="img-container" *ngIf="(visibility$|async)?.showTintoRoll">
+    <img src="../assets/tintoRoll.gif">
+  </div>
 </div>
 
